--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,118 @@
-body {
+*{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+input,button{
+  appearance: none;
+  background: none;
+  border: none;
+  outline: none;
 }
+
+.App{
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #53565A;
+}
+
+form {
+  display: block;
+  position: relative;
+}
+
+form:after{
+  content: '';
+  display: block;
+  position: absolute;
+  top: -5px;
+  left: -5px;
+  bottom: -5px;
+  right: -5px;
+  z-index: 1;
+  /* background-color: brown; */
+  /* height: 400px; */
+  background-color: #cccccc;
+  background-image: linear-gradient(red, yellow);}
+
+form .form-inner{
+  position: relative;
+  display: block;
+  background-color: rgb(31, 28, 29);
+  padding: 30px;
+  z-index: 3;
+}
+
+form .form-inner h2{
+  color: #888;
+  font-size: 28px;
+  font-weight: 500;
+  margin-bottom: 30px;
+}
+
+form .form-inner .form-group{
+  color: #888;
+  font-size: 28px;
+  font-weight: 500;
+  margin-bottom: 30px;
+}
+form .form-inner .form-group label{
+  display: block;
+  color: #666;
+  font-size: 28px;
+  margin-bottom: 5px;
+} 
+form .form-inner .form-group:focus-within label{
+  display: block;
+  color: rgb(188, 20, 20);
+  font-size: 28px;
+  margin-bottom: 5px;
+} 
+
+form .form-inner .form-group input{
+
+  display: block;
+  width: 100%;
+  padding: 10px 15px;
+  background-color: #F8F8F8;
+  border-radius: 8px;
+  font-size: 15px;
+  transition: 0.4s;
+} 
+
+form .form-inner .form-group input:focus{
+  box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.2);
+} 
+form .form-inner input[type="submit"]{
+  background-color: rgb(239, 63, 63);
+  display: block;
+  padding: 10px 15px;
+  border-radius: 8px;
+  background-color: #cccccc;
+  background-image: linear-gradient(to right,rgb(194, 219, 71), red, yellow);
+    background-size: 200%;
+  background-position: 0%;
+  transition: 0.4s;
+  color: #FFF;
+  font-weight: 700;
+  cursor: pointer;
+} 
+
+form .form-inner input[type="submit"]:hover{
+  /* background-color: #cccccc;
+  background-image: linear-gradient(yellow, red); */
+
+   background-position: 100% 0%;
+
+} 
+
+.welcome{
+  width: 100%;
+  max-width: 480px;
+  background-color: rgb(151, 192, 192);
+  padding: 15px 30px;
+} 
